[project]
name = "gfw-data-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~= 3.10"
dependencies = [
    "aenum",
    "aiofiles",
    "aiohttp",
    "alembic",
    "arq",
    "asgi_lifespan",
    "async-lru",
    "asyncpg",
    "boto3",
    "botocore",
    "email-validator",
    "fastapi",
    "geoalchemy2<0.12",
    "geojson",
    "gino",
    "gino_starlette",
    "google-cloud-storage",
    "httpcore",
    "httpx",
    "httpx-auth",
    "newrelic",
    "numpy<2",
    "openapi_spec_validator",
    "orjson",
    "packaging",
    "pendulum<3",
    "pglast<2",
    "psutil",
    "psycopg2",
    "pydantic<2",
    "pyproj",
    "python-multipart",
    "retrying",
    "shapely",
    "sqlalchemy<1.4",
    "sqlalchemy-utils",
    "starlette",
    "typer",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "docker",
    "geopandas",
    "gfw-pixetl",
    "moto<5",
    "pandas<2.2",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "rasterio==1.3.11",
    "retrying",
]

[tool.setuptools]
packages = ["app", "batch"]

[tool.uv.sources]
gfw-pixetl = { git = "https://github.com/wri/gfw_pixetl.git", branch = "develop" }
